# AutoText2SqlAgent

./: .dockerignore  .env  .env.example  Dockerfile  README.md  config.yaml  config.yaml.example  docker-compose.yaml  pyproject.toml
autotext2sql/: __init__.py  api.py  config.py  context.py  index.py  observability.py  ui.py
autotext2sql/agent/: __init__.py  graph.py  prompts.py  state.py
autotext2sql/agent/nodes/: human_approval.py  input_guard.py  output_guard.py  query_analyzer.py  relevance_check.py  response_generator.py  retriever_node.py  sql_executor.py  sql_generator.py  sql_validator.py
autotext2sql/retriever/: __init__.py  indexer.py  models.py  search.py
autotext2sql/tools/: __init__.py  database.py  embedding.py  llm_gateway.py  memory_store.py  vector_store.py
configuration/: docker-compose.yaml
configuration/ops/observability/: otel-collector-config.yaml  prometheus.yml  promtail-config.yaml
db-init/: Dockerfile
docs/: governance.md  product-proposal.md  system-design.md
docs/diagrams/: c4-component.md  c4-container.md  c4-context.md  data-flow.md  workflow.md
docs/specs/: agent-orchestrator.md  memory-context.md  observability-evals.md  retriever.md  serving-config.md  tools-apis.md
evals/: __init__.py  bird_eval.py  metrics.py
